feat(category): make obligation category configurable
